--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "@mercuryworkshop/epoxy-transport": "^1.1.0",
     "@tomphttp/bare-server-node": "^2.0.2",
-    "serve-static": "^1.15.0"
+    "express": "^4.19.2",
+    "serve-static": "^1.15.0",
+    "wisp-server-cpp": "1.0.7-b"
   },
   "name": "aboutproxy",
   "version": "dev",
